--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "express": "^4.21.2",
+        "googleapis": "^144.0.0",
         "mongoose": "^8.9.2",
         "pino": "^9.6.0",
         "pino-http": "^10.3.0",
